# kssb-menu

./: .gitignore  get.py  kssbmenu.py  output.txt  pyproject.toml  readme.md  test.py
kssb_menu/: __init__.py  menu.py
